# aoc-2022-rust

./: Cargo.toml
aoc-benchmark/: Cargo.toml
aoc-benchmark/benches/: day1_benchmark.rs  days_benchmark.rs
aoc-lib/: Cargo.toml
aoc-lib/src/: day1.rs  day2.rs  day3.rs
aoc-runner/: Cargo.toml
aoc-runner/src/: main.rs
src/: day1.rs  main.rs
