[package]
name = "aoc-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-lib = { path = "../aoc-lib" }
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "day1_benchmark"
harness = false